Issue #1587232 by omega8cc: Fixed All radios labels in forms use incorrect vertical-align property value (middle).

--- a/themes/eldir/style.css
+++ b/themes/eldir/style.css
@@ -566,7 +566,6 @@ form div.form-item {
 div.form-item label.option,
 div.form-item label.option * {
   font-size:1em;
-  vertical-align:middle;
   }
 
 div.form-item div.description {
